<resources>
    <string name="app_name">Exrate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_list">Изменить список</string>
    <string name="daily_range">Дневной диапазон</string>
    <string name="open">Открытие</string>
    <string name="Bet">Ставка</string>
    <string name="next">Продолжить</string>
    <string name="start_text_main">Exrate - актуальные курсы валют без смс и регистрации</string>
    <string name="start_text_warning">Данное приложение является тестовым, из-за ограничений api возможны задержки при работе приложения.</string>
    <string name="market">Market</string>
    <string name="portfolio">Portfolio</string>
    <string name="profile">Profile</string>
    <string name="today_trading_activity">Today trading activity</string>
    <string name="volume">VOLUME</string>
    <string name="menu">Menu</string>
    <string name="theme">Theme</string>
    <string name="system">System</string>
    <string name="white">White</string>
    <string name="dark">Dark</string>
</resources>