<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.settingTheme.SettingThemeFragment">


    <include
        android:id="@+id/upBar"
        layout="@layout/up_bar_simple_title_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        style="@style/textNameCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upBar" />


    <LinearLayout
        android:id="@+id/linearButtonTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:paddingBottom="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/black_theme_card" />

            <RadioButton
                android:id="@+id/rBDark"
                style="@style/mainRadioButton"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <TextView
                style="@style/textNameCurrencySecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:text="@string/dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:paddingBottom="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/white_theme_card" />

            <RadioButton
                android:id="@+id/rBWhite"
                style="@style/mainRadioButton"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <TextView
                style="@style/textNameCurrencySecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:text="@string/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:paddingBottom="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/system_theme_card" />

            <RadioButton
                android:id="@+id/rBSystem"
                style="@style/mainRadioButton"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <TextView
                style="@style/textNameCurrencySecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:text="@string/system" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>